--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_blue_200">#81d4fa</color>
-    <color name="light_blue_500">#03a9f4</color>
-    <color name="light_blue_700">#0288d1</color>
+    <color name="colorPrimary">#03a9f4</color>
+    <color name="colorPrimaryDark">#3949ab</color>
+    <color name="colorAccent">#00bcd4</color>
 </resources>
