--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -7,5 +7,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="테스트 중"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop= "true"
+        android:textSize="25sp"
+        android:text="테스트 중" />
 </RelativeLayout>
