--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,22 +20,22 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
-            android:text="주소"
+            android:text="@string/address"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/addressDetailTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:hint="ex)서울 영등포구 문래동"
-            android:textSize="14sp" />
+            android:layout_centerInParent="true" />
 
         <androidx.appcompat.widget.SearchView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:hint="@string/exaddress"
+            android:textSize="14sp"/>
     </RelativeLayout>
 
     <ImageView
@@ -55,8 +55,9 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/weatherViewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_below="@+id/dotted_line"
+        android:layout_above="@+id/weatherTab"
         android:layout_weight="1" />
 
 </RelativeLayout>
