--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -20,7 +20,7 @@
                 android:layout_centerInParent="true"
                 android:layout_gravity="center"
                 android:text="@string/nowFcst"
-                android:textSize="18sp" />
+                android:textSize="@dimen/FcstTitle" />
 
             <LinearLayout
                 android:id="@+id/nowFcstLayout"
@@ -56,7 +56,7 @@
                         android:layout_columnSpan="3"
                         android:layout_centerHorizontal="true"
                         android:layout_gravity="center"
-                        android:textSize="64sp" />
+                        android:textSize="@dimen/NowTempTV" />
 
                     <TextView
                         android:id="@+id/nowFcstTV"
@@ -66,7 +66,7 @@
                         android:layout_below="@+id/nowTempTV"
                         android:layout_centerHorizontal="true"
                         android:gravity="center"
-                        android:textSize="18sp" />
+                        android:textSize="@dimen/NowFcstTV" />
                 </RelativeLayout>
             </LinearLayout>
 
@@ -85,7 +85,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:textAlignment="center"
-                    android:textSize="13sp" />
+                    android:textSize="@dimen/NowWetRainWindLayout" />
 
                 <TextView
                     android:id="@+id/nowRainTV"
@@ -95,7 +95,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:textAlignment="center"
-                    android:textSize="13sp" />
+                    android:textSize="@dimen/NowWetRainWindLayout" />
 
                 <TextView
                     android:id="@+id/nowWindTV"
@@ -105,7 +105,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:textAlignment="center"
-                    android:textSize="13sp" />
+                    android:textSize="@dimen/NowWetRainWindLayout" />
             </LinearLayout>
 
             <ImageView
@@ -122,12 +122,12 @@
                 android:layout_below="@id/now_dot_line"
                 android:layout_marginLeft="14dp"
                 android:text="@string/timeFcst"
-                android:textSize="14sp" />
+                android:textSize="@dimen/FcstRvTitle" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/timeFcstRV"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@id/timeFcstTV" />
 
             <ImageView
@@ -144,7 +144,7 @@
                 android:layout_below="@id/time_dot_line"
                 android:layout_marginLeft="14dp"
                 android:text="@string/weekFcst"
-                android:textSize="14sp" />
+                android:textSize="@dimen/FcstRvTitle" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/weekFcstRV"
