--- a/app/src/main/res/layout/weather_week_recycler_item.xml
+++ b/app/src/main/res/layout/weather_week_recycler_item.xml
@@ -1,61 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="304dp"
-    android:layout_height="31dp"
+    android:layout_width="@dimen/WeekRVItemWidth"
+    android:layout_height="@dimen/WeekRVItemHeight"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/weekDateTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12dp"
         android:layout_centerVertical="true"
-        android:text="3.01(월)"/>
+        android:text="3.01(월)"
+        android:textSize="@dimen/WeekRVItmeText" />
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_toLeftOf="@id/weekPmTV"
         android:layout_toRightOf="@+id/weekDateTV"
-        android:layout_toLeftOf="@id/weekPmTV">
+        android:gravity="center">
+
         <TextView
             android:id="@+id/weekAmTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12dp"
             android:layout_centerVertical="true"
-            android:text="@string/am"/>
+            android:text="@string/am"
+            android:textSize="@dimen/WeekRVItmeText" />
+
         <TextView
             android:id="@+id/weekAmTempTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:text="7"
-            android:gravity="center"
+            android:layout_toLeftOf="@+id/weekAmIV"
             android:layout_toRightOf="@id/weekAmTV"
-            android:layout_toLeftOf="@+id/weekAmIV"/>
+            android:gravity="center"
+            android:text="7"
+            android:textSize="@dimen/WeekRVItmeText" />
 
         <ImageView
             android:id="@+id/weekAmRainperIV"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="@dimen/WeekRVItemIVSmall"
+            android:layout_height="@dimen/WeekRVItemIVSmall"
             android:layout_below="@id/weekAmTempTV"
             android:layout_toRightOf="@+id/weekAmTV"
             android:src="@drawable/rainper" />
+
         <TextView
             android:id="@+id/weekAmRainperTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:text="20%"
             android:layout_below="@+id/weekAmTempTV"
-            android:layout_toRightOf="@id/weekAmRainperIV"/>
+            android:layout_toRightOf="@id/weekAmRainperIV"
+            android:text="20%"
+            android:textSize="@dimen/WeekRVItmeText" />
 
         <ImageView
             android:id="@+id/weekAmIV"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_toRightOf="@id/weekAmRainperTV"
+            android:layout_width="@dimen/WeekRVItemIV"
+            android:layout_height="@dimen/WeekRVItemIV"
             android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/weekAmRainperTV"
             android:src="@drawable/cloud" />
     </RelativeLayout>
 
@@ -63,7 +67,7 @@
         android:id="@+id/weekPmTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12dp"
+        android:textSize="@dimen/WeekRVItmeText"
         android:layout_toLeftOf="@+id/weekPmRainperIV"
         android:layout_centerVertical="true"
         android:text="@string/pm"/>
@@ -71,15 +75,15 @@
         android:id="@+id/weekPmTempTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12dp"
+        android:textSize="@dimen/WeekRVItmeText"
         android:text="7"
         android:gravity="center"
         android:layout_toRightOf="@id/weekPmTV"
         android:layout_toLeftOf="@+id/weekPmIV"/>
     <ImageView
         android:id="@+id/weekPmRainperIV"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="@dimen/WeekRVItemIVSmall"
+        android:layout_height="@dimen/WeekRVItemIVSmall"
         android:src="@drawable/rainper"
         android:layout_below="@id/weekPmTempTV"
         android:layout_toLeftOf="@+id/weekPmRainperTV"/>
@@ -87,15 +91,15 @@
         android:id="@+id/weekPmRainperTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12dp"
+        android:textSize="@dimen/WeekRVItmeText"
         android:text="20%"
         android:layout_below="@+id/weekPmTempTV"
         android:layout_toLeftOf="@id/weekPmIV"/>
 
     <ImageView
         android:id="@+id/weekPmIV"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/WeekRVItemIV"
+        android:layout_height="@dimen/WeekRVItemIV"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:src="@drawable/cloud" />
