--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".activity.MainActivity"
     android:orientation="horizontal"
     >
 
@@ -32,15 +32,15 @@
         <Button
             android:id="@+id/buttonMap"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
     <ImageView
         android:id="@+id/dotted_line"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/dotted_line_long"
-        />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/address"
+        android:src="@drawable/dotted_line_long" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/weatherTab"
@@ -53,14 +53,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/dotted_line"
-        android:layout_above="@+id/weatherTab"
-        android:layout_weight="1" />
+        android:layout_above="@+id/weatherTab"/>
 
     <FrameLayout
         android:id="@+id/naverMap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/address"
         android:visibility="invisible" />
 
 
